File Name: CHANGES

09/10/2016 FASP 1.8.6:
- Make changes for new preconditioners in FASP4BLKOIL.
- Translate ILU from Fortran to C.
- Add a new flag for using C version ILU.
- Add symbfactor in C.
- Modify VS10 for new ILU routines accordingly.
- Remove ilu.f from the windows VS10 version.

03/06/2016 FASP 1.8.5:
- Fix a bug in BSR AMG.
- Add some comments and reference for GCR.
- Add a new version of BiCGstab implementation.
- Update regeression results.
- Refresh function decroration in fasp_functs.h.

02/15/2016 FASP 1.8.4:
- Add an interface to Intel MKL PARDISO.
- Add PARDISO option for coarse solver of AMG.
- Remove some warnings.
- Test GCC 5.3.
- Reformat CMakeFile.
- Update developer list.
- Update website and documentation.

11/02/2015 FASP 1.8.3:
- Fixed the broken FASP package on fasp.sf.net.

10/18/2015 FASP 1.8.2:
- Removed password protect from fasp.sf.net.
- Updated the webpage and documentation.
- Added more output for Makefiles and INSTALL.
- Update VS10 solution according to structure changes.
- Update Makefile(s) in tutorial and test subdirectories. 
- Added "write_config.cmake" to $(faspsolver)/modules which writes 
  CC, FC, CXX, and FASP_INSTALL_PREFIX variables so that they can 
  be included from Makefiles in test tutorial or user defined ones.
- Updated userguide.tex saying that the tests in $(faspsolver)/test 
  and the examples in $(faspsolver)/tutorial can be build with both
  "cmake" as well as custom created Makefile(s).
- Updated userguide including listing of Config.mk.
- Update building strategy: build library and examples separately.
- Update the documentation (user guide) accordingly. 
- Remove forts_ns.h which was a header included by several source files
  but never used by them. 
- Separate include to two parts base/include for FASP headers and 
  base/extra/include for external headers.
- Add Makefiles for test and tutorial.
- Update tutorial examples in user's guide.
- Update faspsolver webpage and documentation.